Added Sound effect Feature, and Haptics, fixed UI overlap and the timer lock logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   url_launcher: ^6.3.2
   wakelock_plus: ^1.4.0
+  audioplayers: ^6.5.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  
+  assets:
+    - assets/sounds/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
