--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.3.2
   wakelock_plus: ^1.4.0
   audioplayers: ^6.5.1
+  flutter_local_notifications: ^19.5.0
 
 dev_dependencies:
   flutter_test:
