--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_timezone: ^3.0.1
   fl_chart:
   intl: 
+  flutter_background: ^1.3.0
 
 dev_dependencies:
   flutter_test:
